--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
 .hero {
     background-image: linear-gradient(to right, rgba(67, 233, 122, 0.635) 40%, rgba(56, 249, 214, 0.58) 50%), url("../image/header\ teamwork.jpg");
     width: 100%;
-    height: 650px;
+    height: 750px;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -34,7 +34,7 @@ body {
 }
 
 .text-hero h1 {
-    margin-top: 60px;
+    margin-top: 120px;
     font-size: 50px;
 }
 
@@ -47,7 +47,10 @@ body {
     display: inline-block;
     text-decoration: none;
     padding: 14px 18px;
-    background: #00fff2;
+    /* background: #00fff2; */
+    /* background: #F79256; */
+    background: #397367;
+    /* background: #488B49; */
     color: white;
     border-radius: 10px;
 }
@@ -57,4 +60,101 @@ body {
     bottom: 0;
     left: 0;
     width: 100%;
+}
+
+.container,
+.wave-container {
+    width: 90%;
+    max-width: 1000px;
+    overflow: hidden;
+    margin: auto;
+    padding: 0 0 80px 0;
+
+}
+
+.container {
+    padding: 80px 0;
+}
+
+.title {
+    font-weight: 300;
+    font-size: 30px;
+    text-align: center;
+    margin-bottom: 25px;
+
+}
+
+.title.left {
+    text-align: left;
+}
+
+.website {
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.website img {
+    width: 48%
+}
+
+.website .container-text-main {
+    width: 40%
+}
+
+.paragraph {
+    text-align: justify;
+    margin-bottom: 25px;
+}
+
+.cta {
+    display: inline-block;
+    background-image: linear-gradient(45deg, #43e97a 0%, #48D597 99%, #38f9d6 100%);
+    text-decoration: none;
+    border-radius: 10px;
+    padding: 12Px 15Px;
+    color: #fff; 
+
+}
+
+.info{
+    background: #48D597;
+    color: #fff;
+}
+
+.content-cards{
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+
+
+}
+
+.card{
+    width: 30%;
+    text-align: center;
+    height: 300px;
+    box-shadow: 0 0 3px 0 rgba(0, 0, 0, .5 );
+    transform: scale(1);
+    transition: transform 0.6s;
+}
+
+.card:hover {
+    box-shadow: 0 0 6px 0 rgba(0, 0, 0, .5);
+    transform: scale(1.03);
+    cursor:pointer;
+}
+
+.card i {
+    margin: 30px 0 20px 0;
+    color:#48D597;
+    font-size: 55px;
+}
+
+.card p {
+    font-weight: 300px;
+    font-size: 20px;
+    margin-bottom: 10px;
+    
 }
